edit: 임금테이블 주휴수당, 휴일 기본, 가산임금 수정

--- a/salary/templates/salary/table2.html
+++ b/salary/templates/salary/table2.html
@@ -267,8 +267,8 @@
                 <div class="sumLegalAllowance" style="display: flex;">
                     <div class="weekly_holiday_allowance">주휴수당</div>
                     <div class="legal_holiday_allowance">법정휴일</div>
-                    <div class=""></div>
-                    <div class="additional_wage"></div>
+                    <div class="weekly_extension_wage">주연장 기본임금</div>
+                    <div class="weekly_extension_additional_wage"></div>
                     <div class="night_shift_wage"></div>
                     <div class="holiday_work_wage"></div>
                     <div class="additional_holiday_work_wage"></div>
