--- a/templates/base.html
+++ b/templates/base.html
@@ -199,6 +199,15 @@
                 <a href="{% url 'salary:table2' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">임금테이블2</li>
                 </a>
+                <a href="{% url 'salary:Salary_Distribution' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">급여 분포도</li>
+                </a>
+                <a href="{% url 'salary:daily_status' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">일일근무현황</li>
+                </a>
+                <a href="{% url 'salary:weekly_status' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">주간근무현황</li>
+                </a>
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(현재)</li>
                 </a>
